finish looking closer

--- a/posts/008_looking_closer/looking_closer.ipynb
+++ b/posts/008_looking_closer/looking_closer.ipynb
@@ -18,10 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "46301a28-1c30-4ffe-82f2-2da986070a22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "f-string: unmatched '[' (24386522.py, line 73)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 73\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmessages.append(f\"{record[\"name\"]}:\\n{record[\"content\"]}\")\u001b[39m\n                               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m f-string: unmatched '['\n"
+     ]
+    }
+   ],
    "source": [
     "# as always, some boilerplate\n",
     "from openai import OpenAI\n",
@@ -95,7 +104,7 @@
     "            messages.append(\"mediator:\\n\" + record[\"content\"])\n",
     "        \n",
     "        if record[\"role\"] == \"assistant\":\n",
-    "            messages.append(f\"{record[\"name\"]}:\\n{record[\"content\"]}\")\n",
+    "            messages.append(f\"{record['name']}:\\n{record['content']}\")\n",
     "    \n",
     "    conversation_transcript = \"\\n\\n\".join(messages)\n",
     "    \n",
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "534d4cca-7f07-4351-875c-6a5602e64e02",
    "metadata": {},
    "outputs": [],
@@ -226,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e411dbe8-0891-48d3-a5bb-60fd3d3be7b5",
    "metadata": {},
    "outputs": [
@@ -249,21 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c510389e-d4db-4e60-bacb-5ec49f280465",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<a href='long_conversation.txt' target='_blank'>long_conversation.txt</a><br>"
-      ],
-      "text/plain": [
-       "/Commjhub/jupyterhub/home/ezou626/comm4190_F25_Using_LLMs_Blog/posts/007_looking_closer/long_conversation.txt"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'save_conversation' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m transcript = \u001b[43msave_conversation\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mlong_conversation.txt\u001b[39m\u001b[33m\"\u001b[39m, conversation)\n",
+      "\u001b[31mNameError\u001b[39m: name 'save_conversation' is not defined"
+     ]
     }
    ],
    "source": [
@@ -281,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "af726197-fc7f-46d6-816b-7ecf5ef19db3",
    "metadata": {},
    "outputs": [],
@@ -308,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a352d469-7121-4304-8c00-0a197599388e",
    "metadata": {},
    "outputs": [
@@ -370,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "f5c3cbe7-c9ca-4ae4-8306-ad5b65bc2dec",
    "metadata": {},
    "outputs": [
@@ -410,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3dae5eea-c015-4b24-be63-b3da41301457",
    "metadata": {},
    "outputs": [
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "f9c4cde0-e0a4-4428-930a-eb8cf41b7b35",
    "metadata": {},
    "outputs": [
@@ -499,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "92db8b35-e2f4-474a-b81d-04da6b816dbd",
    "metadata": {},
    "outputs": [
@@ -546,13 +554,18 @@
    "id": "ed5c4a0c-156e-4493-9c6b-db496d50fb2d",
    "metadata": {},
    "source": [
-    "## Consensus: TF/IDF Similarity\n",
-    "We'll look at consensus overall as the TF/IDF similarity of messages in the conversation, potentially weighting them to make them heavier."
+    "## Comprehensive Evaluation Metrics\n",
+    "\n",
+    "Now let's implement the full set of 4 evaluation metrics that match our LLM evaluation prompt. These give us quantitative, reproducible scores for:\n",
+    "- **Dynamic**: Collaborative (1) vs. Competitive (10)\n",
+    "- **Conclusiveness**: Consensus (1) vs. Divergence (10)\n",
+    "- **Speaker Identity**: Similarity (1) vs. Diversity (10)\n",
+    "- **Speaker Fluidity**: Malleability (1) vs. Consistency (10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "ee2a5278-89c1-4570-8754-1524669f7b1c",
    "metadata": {},
    "outputs": [
@@ -569,38 +582,198 @@
     }
    ],
    "source": [
-    "from convokit import ColNormedTfidfTransformer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from convokit.coordination import Coordination\n",
+    "from collections import defaultdict\n",
     "import numpy as np\n",
     "\n",
-    "# Step 1: Parse corpus text (if not already done)\n",
-    "parser = TextParser()\n",
-    "tx_corpus = parser.transform(corpus)\n",
+    "# Add timestamps to utterances for temporal analysis\n",
+    "for idx, utt in enumerate(corpus.iter_utterances()):\n",
+    "    utt.meta[\"timestamp\"] = idx\n",
     "\n",
-    "# Step 2: Apply TF-IDF transformer\n",
-    "tfidf = ColNormedTfidfTransformer(input_field=\"text\")\n",
-    "tx_corpus = tfidf.transform(tx_corpus)\n",
+    "def compute_dynamic_score(corpus: Corpus) -> float:\n",
+    "    \"\"\"Dynamic: Collaborative (1) vs. Competitive (10)\"\"\"\n",
+    "    try:\n",
+    "        # Use the politeness corpus we already created\n",
+    "        politeness_scores = []\n",
+    "        for utt in ps_corpus.iter_utterances():\n",
+    "            ps_score = utt.meta.get(\"politeness_strategies\", {})\n",
+    "            positive_markers = sum([\n",
+    "                ps_score.get(\"feature_politeness_==HASPOSITIVE==\", 0),\n",
+    "                ps_score.get(\"feature_politeness_==HASNEGATIVE==\", 0) * -1,\n",
+    "            ])\n",
+    "            politeness_scores.append(positive_markers)\n",
+    "        \n",
+    "        avg_politeness = np.mean(politeness_scores) if politeness_scores else 0\n",
+    "        # Normalize to 0-1 scale (rough approximation)\n",
+    "        avg_politeness = min(1.0, max(0.0, avg_politeness / 10.0))\n",
+    "        \n",
+    "        # Turn-taking balance (entropy)\n",
+    "        speaker_counts = defaultdict(int)\n",
+    "        for utt in corpus.iter_utterances():\n",
+    "            speaker_counts[utt.speaker.id] += 1\n",
+    "        \n",
+    "        if len(speaker_counts) == 0:\n",
+    "            return 5.0\n",
+    "        \n",
+    "        total = sum(speaker_counts.values())\n",
+    "        probs = [count / total for count in speaker_counts.values()]\n",
+    "        entropy = -sum(p * np.log2(p) for p in probs if p > 0)\n",
+    "        max_entropy = np.log2(len(speaker_counts))\n",
+    "        balance_score = entropy / max_entropy if max_entropy > 0 else 0\n",
+    "        \n",
+    "        combined = (avg_politeness + balance_score) / 2\n",
+    "        score = 10 - (combined * 9)\n",
+    "        return max(1, min(10, score))\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error computing dynamic score: {e}\")\n",
+    "        return 5.0\n",
     "\n",
-    "# Step 3: Compute consensus as average pairwise cosine similarity\n",
-    "def compute_consensus(corpus: Corpus) -> float:\n",
-    "    utterances = list(corpus.iter_utterances())\n",
-    "    vectors = [utt.meta['tfidf'] for utt in utterances if 'tfidf' in utt.meta]\n",
+    "def compute_conclusiveness_score(corpus: Corpus) -> float:\n",
+    "    \"\"\"Conclusiveness: Consensus (1) vs. Divergence (10)\"\"\"\n",
+    "    try:\n",
+    "        coord = Coordination()\n",
+    "        coord_corpus = coord.transform(corpus)\n",
+    "        \n",
+    "        agreement_markers = [\"agree\", \"yes\", \"exactly\", \"right\", \"true\", \"correct\", \"indeed\"]\n",
+    "        disagreement_markers = [\"disagree\", \"no\", \"but\", \"however\", \"although\", \"wrong\", \"incorrect\"]\n",
+    "        \n",
+    "        agreement_count = 0\n",
+    "        disagreement_count = 0\n",
+    "        \n",
+    "        for utt in coord_corpus.iter_utterances():\n",
+    "            text_lower = utt.text.lower()\n",
+    "            for marker in agreement_markers:\n",
+    "                if marker in text_lower:\n",
+    "                    agreement_count += 1\n",
+    "            for marker in disagreement_markers:\n",
+    "                if marker in text_lower:\n",
+    "                    disagreement_count += 1\n",
+    "        \n",
+    "        agreement_ratio = agreement_count / max(disagreement_count, 1)\n",
+    "        \n",
+    "        if agreement_ratio > 2:\n",
+    "            score = 1 + (agreement_ratio - 2) / 10\n",
+    "        elif agreement_ratio < 0.5:\n",
+    "            score = 10 - (0.5 - agreement_ratio) * 10\n",
+    "        else:\n",
+    "            score = 5.0\n",
+    "        \n",
+    "        return max(1, min(10, score))\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error computing conclusiveness score: {e}\")\n",
+    "        return 5.0\n",
     "\n",
-    "    if len(vectors) < 2:\n",
-    "        return 0.0  # Not enough data to compute consensus\n",
+    "def compute_speaker_identity_score(corpus: Corpus) -> float:\n",
+    "    \"\"\"Speaker Identity: Similarity (1) vs. Diversity (10)\"\"\"\n",
+    "    try:\n",
+    "        speakers = {}\n",
+    "        \n",
+    "        for utt in corpus.iter_utterances():\n",
+    "            speaker_id = utt.speaker.id\n",
+    "            if speaker_id not in speakers:\n",
+    "                speakers[speaker_id] = {\"words\": set()}\n",
+    "            \n",
+    "            words = set(re.findall(r'\\b\\w+\\b', utt.text.lower()))\n",
+    "            speakers[speaker_id][\"words\"].update(words)\n",
+    "        \n",
+    "        if len(speakers) < 2:\n",
+    "            return 5.0\n",
+    "        \n",
+    "        speaker_list = list(speakers.keys())\n",
+    "        overlaps = []\n",
+    "        \n",
+    "        for i in range(len(speaker_list)):\n",
+    "            for j in range(i + 1, len(speaker_list)):\n",
+    "                words_i = speakers[speaker_list[i]][\"words\"]\n",
+    "                words_j = speakers[speaker_list[j]][\"words\"]\n",
+    "                \n",
+    "                if len(words_i) == 0 or len(words_j) == 0:\n",
+    "                    continue\n",
+    "                \n",
+    "                overlap = len(words_i & words_j) / len(words_i | words_j)\n",
+    "                overlaps.append(overlap)\n",
+    "        \n",
+    "        if not overlaps:\n",
+    "            return 5.0\n",
+    "        \n",
+    "        avg_overlap = np.mean(overlaps)\n",
+    "        score = 10 - (avg_overlap * 9)\n",
+    "        return max(1, min(10, score))\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error computing speaker identity score: {e}\")\n",
+    "        return 5.0\n",
     "\n",
-    "    matrix = np.vstack(vectors)\n",
-    "    sim_matrix = cosine_similarity(matrix)\n",
+    "def compute_speaker_fluidity_score(corpus: Corpus, window_size: int = 10) -> float:\n",
+    "    \"\"\"Speaker Fluidity: Malleability (1) vs. Consistency (10)\"\"\"\n",
+    "    try:\n",
+    "        speaker_utterances = defaultdict(list)\n",
+    "        \n",
+    "        for utt in corpus.iter_utterances():\n",
+    "            speaker_utterances[utt.speaker.id].append({\n",
+    "                \"text\": utt.text,\n",
+    "                \"timestamp\": utt.meta.get(\"timestamp\", 0)\n",
+    "            })\n",
+    "        \n",
+    "        if len(speaker_utterances) == 0:\n",
+    "            return 5.0\n",
+    "        \n",
+    "        consistency_scores = []\n",
+    "        \n",
+    "        for speaker_id, utts in speaker_utterances.items():\n",
+    "            if len(utts) < window_size:\n",
+    "                continue\n",
+    "            \n",
+    "            utts_sorted = sorted(utts, key=lambda x: x[\"timestamp\"])\n",
+    "            mid_point = len(utts_sorted) // 2\n",
+    "            \n",
+    "            first_half_words = set()\n",
+    "            second_half_words = set()\n",
+    "            \n",
+    "            for utt in utts_sorted[:mid_point]:\n",
+    "                words = set(re.findall(r'\\b\\w+\\b', utt[\"text\"].lower()))\n",
+    "                first_half_words.update(words)\n",
+    "            \n",
+    "            for utt in utts_sorted[mid_point:]:\n",
+    "                words = set(re.findall(r'\\b\\w+\\b', utt[\"text\"].lower()))\n",
+    "                second_half_words.update(words)\n",
+    "            \n",
+    "            if len(first_half_words) == 0 or len(second_half_words) == 0:\n",
+    "                continue\n",
+    "            \n",
+    "            overlap = len(first_half_words & second_half_words)\n",
+    "            union = len(first_half_words | second_half_words)\n",
+    "            similarity = overlap / union if union > 0 else 0\n",
+    "            consistency_scores.append(similarity)\n",
+    "        \n",
+    "        if not consistency_scores:\n",
+    "            return 5.0\n",
+    "        \n",
+    "        avg_consistency = np.mean(consistency_scores)\n",
+    "        score = 1 + (avg_consistency * 9)\n",
+    "        return max(1, min(10, score))\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error computing speaker fluidity score: {e}\")\n",
+    "        return 5.0\n",
     "\n",
-    "    # Extract upper triangle (excluding diagonal) for pairwise similarities\n",
-    "    n = sim_matrix.shape[0]\n",
-    "    upper_triangle = [sim_matrix[i, j] for i in range(n) for j in range(i+1, n)]\n",
+    "def evaluate_conversation_convokit(corpus: Corpus) -> dict[str, float]:\n",
+    "    \"\"\"Compute all 4 evaluation metrics using ConvoKit.\"\"\"\n",
+    "    return {\n",
+    "        \"dynamic\": compute_dynamic_score(corpus),\n",
+    "        \"conclusiveness\": compute_conclusiveness_score(corpus),\n",
+    "        \"speaker_identity\": compute_speaker_identity_score(corpus),\n",
+    "        \"speaker_fluidity\": compute_speaker_fluidity_score(corpus)\n",
+    "    }\n",
     "\n",
-    "    return np.mean(upper_triangle)\n",
+    "# Compute all metrics\n",
+    "scores = evaluate_conversation_convokit(corpus)\n",
     "\n",
-    "# Run it\n",
-    "consensus_score = compute_consensus(tx_corpus)\n",
-    "print(\"Consensus score (TF-IDF similarity):\", consensus_score)\n"
+    "print(\"=== ConvoKit Evaluation Scores ===\\n\")\n",
+    "print(f\"Dynamic (Collaborative ↔ Competitive): {scores['dynamic']:.2f}/10\")\n",
+    "print(f\"Conclusiveness (Consensus ↔ Divergence): {scores['conclusiveness']:.2f}/10\")\n",
+    "print(f\"Speaker Identity (Similarity ↔ Diversity): {scores['speaker_identity']:.2f}/10\")\n",
+    "print(f\"Speaker Fluidity (Malleability ↔ Consistency): {scores['speaker_fluidity']:.2f}/10\")\n",
+    "print()\n",
+    "print(\"Compare these to the LLM evaluation above to see how well the quantitative metrics align with qualitative assessment.\")\n"
    ]
   },
   {
@@ -610,22 +783,25 @@
    "source": [
     "## Zooming Out\n",
     "\n",
-    "This is probably the closest I've come so far to having something that looks like an \"analysis pipeline\" instead of just vibes: generate a conversation, turn it into a corpus, run a few feature extractors, and spit out numbers. Even if the specific metrics here (politeness counts, TF–IDF consensus) are pretty rough, they at least give me a repeatable handle on how the same setup behaves across runs.\n",
+    "This is probably the closest I've come so far to having something that looks like an \"analysis pipeline\" instead of just vibes: generate a conversation, turn it into a corpus, run a few feature extractors, and spit out numbers. The four metrics above (Dynamic, Conclusiveness, Speaker Identity, Speaker Fluidity) give us quantitative, repeatable scores that match the dimensions we've been using in LLM-based evaluation.\n",
     "\n",
-    "At the same time, these experiments make it very obvious how much judgment still sits outside the notebook. Deciding whether a consensus score is \"good\" or \"bad\" is still a human call, and a single number can't tell you whether a conversation is insightful, boring, or off-the-rails. My plan for the rest of the series is to keep layering these tools—LLM-based summaries, token accounting, TF–IDF, ConvoKit—into a shared toolkit I can reuse instead of reinventing everything from scratch each time.\n",
+    "Comparing the ConvoKit scores to the LLM evaluation shows how well automated metrics can capture conversational dynamics. The politeness analysis and vocabulary overlap measures provide objective baselines, while the LLM evaluation adds qualitative nuance about *why* a conversation feels collaborative or diverse.\n",
+    "\n",
+    "At the same time, these experiments make it very obvious how much judgment still sits outside the notebook. Deciding whether a consensus score is \"good\" or \"bad\" is still a human call, and a single number can't tell you whether a conversation is insightful, boring, or off-the-rails. My plan for the rest of the series is to keep layering these tools—LLM-based summaries, token accounting, ConvoKit metrics—into a shared toolkit I can reuse instead of reinventing everything from scratch each time.\n",
     "\n",
     "> **Future Work:**\n",
     "> - Apply the same pipeline to a handful of very different topics to see how stable these metrics are.\n",
     "> - Compare human ratings of \"good\" conversations against the automatic scores here.\n",
-    "> - Use the token-impact estimator from Blog 9 to relate conversational quality back to actual resource usage.\n"
+    "> - Use the token-impact estimator from Blog 9 to relate conversational quality back to actual resource usage.\n",
+    "> - Refine the metrics based on how well they correlate with LLM and human evaluations.\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3-12 (COMM4190)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "python3-12_comm4190"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -637,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
