--- a/posts/008_looking_closer/looking_closer.ipynb
+++ b/posts/008_looking_closer/looking_closer.ipynb
@@ -18,19 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "46301a28-1c30-4ffe-82f2-2da986070a22",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "f-string: unmatched '[' (24386522.py, line 73)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 73\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmessages.append(f\"{record[\"name\"]}:\\n{record[\"content\"]}\")\u001b[39m\n                               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m f-string: unmatched '['\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# as always, some boilerplate\n",
     "from openai import OpenAI\n",
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "534d4cca-7f07-4351-875c-6a5602e64e02",
    "metadata": {},
    "outputs": [],
@@ -235,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e411dbe8-0891-48d3-a5bb-60fd3d3be7b5",
    "metadata": {},
    "outputs": [
@@ -243,7 +234,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [02:52<00:00,  8.63s/it]\n"
+      "100%|██████████| 20/20 [02:48<00:00,  8.42s/it]\n"
      ]
     }
    ],
@@ -258,20 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c510389e-d4db-4e60-bacb-5ec49f280465",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'save_conversation' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m transcript = \u001b[43msave_conversation\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mlong_conversation.txt\u001b[39m\u001b[33m\"\u001b[39m, conversation)\n",
-      "\u001b[31mNameError\u001b[39m: name 'save_conversation' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<a href='long_conversation.txt' target='_blank'>long_conversation.txt</a><br>"
+      ],
+      "text/plain": [
+       "/home/ezou626/repos/comm4190_F25_Using_LLMs_Blog/posts/008_looking_closer/long_conversation.txt"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -289,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "af726197-fc7f-46d6-816b-7ecf5ef19db3",
    "metadata": {},
    "outputs": [],
@@ -316,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a352d469-7121-4304-8c00-0a197599388e",
    "metadata": {},
    "outputs": [
@@ -325,35 +317,35 @@
       "text/markdown": [
        "**Dynamic:**\n",
        "\n",
-       "Score: 2/10\n",
+       "Score: 1/10\n",
        "\n",
-       "Verdict: The conversation is distinctly collaborative, with participants building on each other's points and sharing strategies.\n",
+       "Verdict: The participants are highly collaborative, engaging in constructive dialogue that supports shared insights and common goals.\n",
        "\n",
-       "Explanation: Speakers frequently express agreement and expand upon each other's ideas, as seen in speaker_2 supporting speaker_3's points and vice versa. Their discussions revolve around mutual challenges and solutions, recognizing each other's contributions positively.\n",
+       "Explanation: All speakers frequently agree and build upon each other's points, showing a willingness to listen, learn, and improve collective understanding. Phrases like \"engaging with the points made by\" and \"adding to what [speaker] already articulated\" suggest active and positive engagement rather than competition.\n",
        "\n",
        "**Conclusiveness:**\n",
        "\n",
-       "Score: 2/10\n",
+       "Score: 1/10\n",
        "\n",
-       "Verdict: The conversation leans heavily towards consensus, with participants finding common ground and aligning their views on documentation practices.\n",
+       "Verdict: The conversation reaches a solid consensus, agreeing on the importance of simplicity, engagement, and strategic alignment.\n",
        "\n",
-       "Explanation: All speakers articulate similar viewpoints on key topics, such as the balance between code and documentation, and the role of tools like AI and collaborative platforms. Despite different environments (startup, open-source, big tech), they converge on solutions, indicating low divergence.\n",
+       "Explanation: The participants converge on the value of maintaining code as a primary source of truth and strategic feedback management. There is mutual acknowledgment of using tools like Jira, GitHub, and frameworks such as agile across various environments, concluding on shared strategies.\n",
        "\n",
        "**Speaker Identity:**\n",
        "\n",
-       "Score: 7/10\n",
+       "Score: 10/10\n",
        "\n",
-       "Verdict: The speakers exhibit distinct identities based on their environments (startup, open-source, big tech), affecting their approaches to documentation.\n",
+       "Verdict: The speakers reflect diverse roles and contexts, each bringing unique perspectives from startups, large organizations, and open-source communities.\n",
        "\n",
-       "Explanation: Each speaker brings a unique perspective influenced by their specific context, such as speaker_3's agility focus in startups, speaker_1's emphasis on comprehensive documentation in big tech, and speaker_2's open-source considerations. However, they share a common interest in documentation improvements.\n",
+       "Explanation: Each speaker introduces context-specific strategies and challenges—speaker_1 discusses large organizations, speaker_2 provides insights from open-source projects, and speaker_3 offers a startup perspective, highlighting diversity in approaches.\n",
        "\n",
        "**Speaker Fluidity:**\n",
        "\n",
-       "Score: 8/10\n",
+       "Score: 10/10\n",
        "\n",
-       "Verdict: Speakers maintain consistent stances and identities throughout the conversation, contributing steadily from their perspectives.\n",
+       "Verdict: Each speaker maintains a consistent role and perspective throughout the conversation.\n",
        "\n",
-       "Explanation: Each speaker consistently integrates their experiences and methodologies into the discussion, reinforcing their individual professional backgrounds. They stick to their respective contexts and offer specific examples (e.g., tools and strategies) relevant to their environments, reflecting consistent roles in the dialogue."
+       "Explanation: speaker_1 consistently represents a large organization perspective, speaker_2 always provides an open-source viewpoint, and speaker_3 stays within the startup focus. Their points of view remain stable and distinct throughout the dialogue, with no shifts or changes in their identified roles."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -378,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f5c3cbe7-c9ca-4ae4-8306-ad5b65bc2dec",
    "metadata": {},
    "outputs": [
@@ -386,9 +378,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32\n",
+      "34\n",
       "['speaker_2', 'speaker_3', 'speaker_1']\n",
-      "32\n"
+      "No configuration file found at /home/ezou626/.convokit/config.yml; writing with contents: \n",
+      "# Default Backend Parameters\n",
+      "db_host: localhost:27017\n",
+      "data_directory: ~/.convokit/saved-corpora\n",
+      "model_directory: ~/.convokit/saved-models\n",
+      "default_backend: mem\n",
+      "34\n"
      ]
     }
    ],
@@ -417,38 +415,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3dae5eea-c015-4b24-be63-b3da41301457",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3.12/pty.py:95: DeprecationWarning:\n",
-      "\n",
-      "This process (pid=1347514) is multi-threaded, use of forkpty() may lead to deadlocks in the child.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting en-core-web-sm==3.8.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m  \u001b[33m0:00:01\u001b[0m6m0:00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
-      "You can now load the package via spacy.load('en_core_web_sm')\n"
-     ]
-    }
-   ],
-   "source": [
-    "!/opt/jupyterhub/share/jupyter/venv/python3-12_comm4190/bin/python -m spacy download en_core_web_sm"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e0f4cbbb-d22a-4c6c-b3ab-2bc1b134910e",
    "metadata": {},
@@ -459,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f9c4cde0-e0a4-4428-930a-eb8cf41b7b35",
    "metadata": {},
    "outputs": [
@@ -468,7 +434,7 @@
      "output_type": "stream",
      "text": [
       "Speaker(id: 'speaker_2', vectors: [], meta: ConvoKitMeta({}))\n",
-      "{'counts': [('speaker_2', 8), ('speaker_3', 8), ('speaker_2', 6), ('speaker_3', 7), ('speaker_2', 6), ('speaker_3', 5), ('speaker_2', 6), ('speaker_1', 7), ('speaker_3', 7), ('speaker_2', 6), ('speaker_1', 7), ('speaker_3', 7), ('speaker_2', 8), ('speaker_1', 5), ('speaker_3', 6), ('speaker_2', 6), ('speaker_3', 5), ('speaker_1', 6), ('speaker_3', 6), ('speaker_2', 6), ('speaker_1', 5), ('speaker_2', 5), ('speaker_3', 9), ('speaker_2', 7), ('speaker_3', 5), ('speaker_1', 8), ('speaker_3', 6), ('speaker_1', 7), ('speaker_2', 7), ('speaker_1', 6), ('speaker_3', 9), ('speaker_2', 6)]}\n"
+      "{'counts': [('speaker_2', 6), ('speaker_3', 6), ('speaker_1', 8), ('speaker_2', 6), ('speaker_1', 7), ('speaker_2', 7), ('speaker_3', 4), ('speaker_2', 6), ('speaker_1', 6), ('speaker_3', 3), ('speaker_1', 5), ('speaker_2', 7), ('speaker_1', 5), ('speaker_3', 5), ('speaker_2', 8), ('speaker_3', 6), ('speaker_1', 6), ('speaker_3', 4), ('speaker_2', 7), ('speaker_1', 6), ('speaker_2', 6), ('speaker_3', 10), ('speaker_2', 6), ('speaker_3', 7), ('speaker_1', 4), ('speaker_3', 5), ('speaker_1', 7), ('speaker_2', 7), ('speaker_1', 7), ('speaker_2', 7), ('speaker_3', 6), ('speaker_1', 9), ('speaker_3', 6), ('speaker_2', 7)]}\n"
      ]
     }
    ],
@@ -507,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "92db8b35-e2f4-474a-b81d-04da6b816dbd",
    "metadata": {},
    "outputs": [
@@ -517,18 +483,18 @@
      "text": [
       "speaker_2\n",
       "Utterances: 12\n",
-      "Strategies: 77\n",
-      "Average: 6.417\n",
-      "\n",
-      "speaker_3\n",
-      "Utterances: 12\n",
       "Strategies: 80\n",
       "Average: 6.667\n",
       "\n",
+      "speaker_3\n",
+      "Utterances: 11\n",
+      "Strategies: 62\n",
+      "Average: 5.636\n",
+      "\n",
       "speaker_1\n",
-      "Utterances: 8\n",
-      "Strategies: 51\n",
-      "Average: 6.375\n",
+      "Utterances: 11\n",
+      "Strategies: 70\n",
+      "Average: 6.364\n",
       "\n"
      ]
     }
@@ -565,19 +531,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ee2a5278-89c1-4570-8754-1524669f7b1c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'ColNormedTfidfTransformer' from 'convokit' (/opt/jupyterhub/share/jupyter/venv/python3-12_comm4190/lib/python3.12/site-packages/convokit/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[68], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mconvokit\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ColNormedTfidfTransformer\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpairwise\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m cosine_similarity\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'ColNormedTfidfTransformer' from 'convokit' (/opt/jupyterhub/share/jupyter/venv/python3-12_comm4190/lib/python3.12/site-packages/convokit/__init__.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error computing conclusiveness score: Coordination: must fit and transform on same corpus\n",
+      "=== ConvoKit Evaluation Scores ===\n",
+      "\n",
+      "Dynamic (Collaborative ↔ Competitive): 5.30/10\n",
+      "Conclusiveness (Consensus ↔ Divergence): 5.00/10\n",
+      "Speaker Identity (Similarity ↔ Diversity): 5.99/10\n",
+      "Speaker Fluidity (Malleability ↔ Consistency): 3.87/10\n",
+      "\n",
+      "Compare these to the LLM evaluation above to see how well the quantitative metrics align with qualitative assessment.\n"
      ]
     }
    ],
@@ -785,7 +755,7 @@
     "\n",
     "This is probably the closest I've come so far to having something that looks like an \"analysis pipeline\" instead of just vibes: generate a conversation, turn it into a corpus, run a few feature extractors, and spit out numbers. The four metrics above (Dynamic, Conclusiveness, Speaker Identity, Speaker Fluidity) give us quantitative, repeatable scores that match the dimensions we've been using in LLM-based evaluation.\n",
     "\n",
-    "Comparing the ConvoKit scores to the LLM evaluation shows how well automated metrics can capture conversational dynamics. The politeness analysis and vocabulary overlap measures provide objective baselines, while the LLM evaluation adds qualitative nuance about *why* a conversation feels collaborative or diverse.\n",
+    "Comparing the ConvoKit scores to the LLM evaluation shows the difficulty of using automated metrics can capture conversational dynamics. The politeness analysis and vocabulary overlap measures provide objective baselines that may be a bit harsh/unforgiving, while the LLM evaluation adds qualitative nuance about *why* a conversation feels collaborative or diverse. We note that the LLM metrics differ greatly from the automated ones.\n",
     "\n",
     "At the same time, these experiments make it very obvious how much judgment still sits outside the notebook. Deciding whether a consensus score is \"good\" or \"bad\" is still a human call, and a single number can't tell you whether a conversation is insightful, boring, or off-the-rails. My plan for the rest of the series is to keep layering these tools—LLM-based summaries, token accounting, ConvoKit metrics—into a shared toolkit I can reuse instead of reinventing everything from scratch each time.\n",
     "\n",
