--- a/posts/012_book_review_2/book_review_2.ipynb
+++ b/posts/012_book_review_2/book_review_2.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "---\n",
         "title: \"Book Review 2\"\n",
-        "description: \"[Your title here]\"\n",
+        "description: \"Section 2\"\n",
         "author: \"Eric Zou\"\n",
         "date: \"9/28/2025\"\n",
         "categories:\n",
